<resources>
    <string name="app_name">Pokedex</string>
    <string name="filterByType">Filter by type</string>
    <string name="search_title">Search by name ..</string>
    <string name="search_hint">Search by name ..</string>
    <string name="sin_resultados">No pokemon found</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="base_experience">Base experience</string>
    <string name="attack">ATK</string>
    <string name="health">HP</string>
    <string name="defense">DEF</string>
    <string name="special_attack">S.AT</string>
    <string name="speed">SPD</string>
    <string name="special_defense">S.DF</string>

</resources>